--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="original_source_text">The original article tou may read by clicking here</string>
+    <string-array name="tag_button_string">
+        <item>Subscribe</item>
+        <item>Unsubscribe</item>
+    </string-array>
 </resources>
