--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,13 @@
         <item quantity="one">a minute ago</item>
         <item quantity="few">%1$d minutes ago</item>
         <item quantity="many">%1$d minutes ago</item>
+        <item quantity="other">%1$d minutes ago</item>
     </plurals>
 
     <plurals name="hours">
         <item quantity="one">an hour ago</item>
         <item quantity="few">%1$d hours ago</item>
         <item quantity="many">%1$d hours ago</item>
+        <item quantity="other">%1$d hours ago</item>
     </plurals>
 </resources>
